  when a module type is used instead of a module or when a class type is used
  instead of a class.
  (Xavier Van de Woestyne, report by whitequark, review by Florian Angeletti
  and Gabriel Scherer)

### Internal/compiler-libs changes:

- #9216: add Lambda.duplicate which refreshes bound identifiers
  (Gabriel Scherer, review by Pierre Chambart and Vincent Laviron)

- #9493, #9520, #9563, #9599, #9608: refactor the pattern-matching compiler
  (Thomas Refis and Gabriel Scherer, review by Florian Angeletti)

- #9604: refactoring of the ocamltest codebase.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Sébastien Hinderer)

- #9498, #9511: make the pattern-matching analyzer more robust to
  or-pattern explosion, by stopping after the first counter-example to
  exhaustivity
  (Gabriel Scherer, review by Luc Maranget, Thomas Refis and Florian Angeletti,
   report by Alex Fedoseev through Hongbo Zhang)

- #9514: optimize pattern-matching exhaustivity analysis in the single-row case
  (Gabriel Scherer, review by Stephen DOlan)

- #9442: refactor the implementation of the [@tailcall] attribute
  to allow for a structured attribute payload
  (Gabriel Scherer, review by Vladimir Keleshev and Nicolás Ojeda Bär)

- #9684: document in address_class.h the runtime value model in
  naked-pointers and no-naked-pointers mode
  (Xavier Leroy and Gabriel Scherer)

- #9696: ocamltest now shows its log when a test fails. In addition, the log
  contains the output of executed programs.
  (Nicolás Ojeda Bär, review by David Allsopp, Sébastien Hinderer and Gabriel
  Scherer)

- #9688: Expose the main entrypoint in compilerlibs
  (Stephen Dolan, review by Nicolás Ojeda Bär, Greta Yorsh and David Allsopp)

### Build system:

- #7121, #9558: Always the autoconf-discovered ld in PACKLD. For
  cross-compilation, this means the triplet-prefixed version will always be
  used.
  (David Allsopp, report by Adrian Nader, review by Sébastien Hinderer)
