@@ -193,7 +193,8 @@ Working version
 - #9216: add Lambda.duplicate which refreshes bound identifiers
   (Gabriel Scherer, review by Pierre Chambart and Vincent Laviron)
 
-- #9493, #9520, #9563, #9599, #9608: refactor the pattern-matching compiler
+- #9493, #9520, #9563, #9599, #9608, #9647: refactor
+  the pattern-matching compiler
   (Thomas Refis and Gabriel Scherer, review by Florian Angeletti)
 
 - #9604: refactoring of the ocamltest codebase.
